# rust-with-python

./: Cargo.toml
base_classifier/: Cargo.toml
base_classifier/src/: classified_message.rs  classifier.rs  classifier_result.rs  error.rs  lib.rs
client/: Cargo.toml
client/src/: main.rs
python_classifier/: Cargo.toml
python_classifier/src/: classifier.py  lib.rs  test_classifier.rs
rust_classifier/: Cargo.toml
rust_classifier/src/: test_classifier.rs
