[package]
name = "python_classifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base_classifier = { path = "../base_classifier", version = "0.1.0" }
pyo3 = { version = "0.15.1", features = ["auto-initialize"] }
